added register and home component

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="jumbotron text-center">
+  <h1>Activity Tracker</h1>
+  <p class="lead">Please visit dashboard to check the activity</p>
+  <div>
+    <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
+  </div>
+</div>
