--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,10 @@
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/']">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/dashboard']">Dashboard</a></li>
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/login']">Login</a></li>
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/register']">Register</a></li>
+        <li><a (click)="onLogout()" href="#">Logout</a></li>
       </ul>
     </div>
   </div>
