added click event tracking

--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,69 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <img
+          id="image1"
+          class="card-img-top image"
+          src="assets/images/image1.jpg"
+          alt="Card image1"
+        />
+        <div class="card-body">
+          <a class="btn btn-primary imageId"> Image 1</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <img
+          id="image2"
+          class="card-img-top image"
+          src="assets/images/image2.jpg"
+          alt="Card image2"
+        />
+        <div class="card-body">
+          <a class="btn btn-primary imageId">Image 2</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <img
+          id="image3"
+          class="card-img-top image"
+          src="assets/images/image3.jpg"
+          alt="Card image3"
+        />
+        <div class="card-body">
+          <a class="btn btn-primary imageId">Image 3</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <img
+          id="image4"
+          class="card-img-top image"
+          src="assets/images/image4.jpg"
+          alt="Card image4"
+        />
+        <div class="card-body">
+          <a class="btn btn-primary imageId">Image 4</a>
+        </div>
+      </div>
+    </div>
+    <div id="image5" class="col-md-4">
+      <div class="thumbnail">
+        <img
+          id="image5"
+          class="card-img-top image"
+          src="assets/images/image5.jpg"
+          alt="Card image5"
+        />
+        <div class="card-body">
+          <a class="btn btn-primary imageId">Image 5</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
