added user analytics page

--- a/client/src/app/components/admin-dashboard/admin-dashboard.component.scss
+++ b/client/src/app/components/admin-dashboard/admin-dashboard.component.scss
@@ -1,15 +1,8 @@
-// .divLeft {
-//   float: left;
-// }
-// .divRight {
-//   float: left;
-//   margin-left: 20px;
-// }
 
 .container {
   display: flex;
 }
 .chart {
-  flex: 1; /*grow*/
+  flex: 1;
 }
 
