--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-4">
+    <div class="chart">
       <div class="thumbnail">
         <img
           id="image1"
@@ -13,7 +12,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="chart">
       <div class="thumbnail">
         <img
           id="image2"
@@ -26,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="chart">
       <div class="thumbnail">
         <img
           id="image3"
@@ -39,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="chart">
       <div class="thumbnail">
         <img
           id="image4"
@@ -52,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div id="image5" class="col-md-4">
+    <div id="image5" class="chart">
       <div class="thumbnail">
         <img
           id="image5"
@@ -65,5 +64,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
