--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -16,8 +16,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/dashboard']">Dashboard</a></li>
+        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/analytics']">Analytics</a></li>
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/login']">Login</a></li>
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/register']">Register</a></li>
+        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true
+        }"><a [routerLink]="['/register']">Register</a></li>
         <li><a (click)="onLogout()" href="#">Logout</a></li>
       </ul>
     </div>
