added feature bar chart

--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -38,30 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="chart">
-      <div class="thumbnail">
-        <img
-          id="image4"
-          class="card-img-top image"
-          src="assets/images/image4.jpg"
-          alt="Card image4"
-        />
-        <div class="card-body">
-          <a class="btn btn-primary imageId">Image 4</a>
-        </div>
-      </div>
-    </div>
-    <div id="image5" class="chart">
-      <div class="thumbnail">
-        <img
-          id="image5"
-          class="card-img-top image"
-          src="assets/images/image5.jpg"
-          alt="Card image5"
-        />
-        <div class="card-body">
-          <a class="btn btn-primary imageId">Image 5</a>
-        </div>
-      </div>
-    </div>
 </div>
+<button type="button" id="download" class="btn btn-primary">Download</button>
+<button type="button" id="upload" class="btn btn-secondary">Upload</button>
+<button type="button" id="reset" class="btn btn-success">Reset</button>
