--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -15,12 +15,12 @@
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/admindashboard']">Admin Dashboard</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/dashboard']">Dashboard</a></li>
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/analytics']">Analytics</a></li>
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/login']">Login</a></li>
-        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true
+        <li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/dashboard']">Dashboard</a></li>
+        <li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/analytics']">Analytics</a></li>
+        <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true}"><a [routerLink]="['/login']">Login</a></li>
+        <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]= "{exact:true
         }"><a [routerLink]="['/register']">Register</a></li>
-        <li><a (click)="onLogout()" href="#">Logout</a></li>
+        <li *ngIf="!authService.loggedIn()"><a (click)="onLogout()" href="#">Logout</a></li>
       </ul>
     </div>
   </div>
